src/main/java/com/example/tapchikhcn/error/ErrorStatus.java
package com.example.tapchikhcn.error;

/*
* code 412_***
* */
public interface ErrorStatus {
    int getCode();

    String getMessage();
}
